# schedule-the-alamo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
.kiro/steering/: ponytail.md  project.md
src/schedule_the_alamo/: __init__.py  __main__.py  fetch.py  filter.py  models.py  normalize.py  ratings.py  render.py  state.py  theaters.json  views.py
src/schedule_the_alamo/static/: filter.js  style.css
src/schedule_the_alamo/templates/: index.html
tests/: test_all_movies.py  test_filter.py  test_health.py  test_showtimes.py  test_state.py
tests/fixtures/: calendar_2103.json
