[project]
name = "schedule-the-alamo"
version = "0.1.0"
description = "Plan movie nights at Alamo Drafthouse — pick your free time, see what fits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "truststore>=0.10.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
schedule-the-alamo = "schedule_the_alamo.__main__:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::starlette.exceptions.StarletteDeprecationWarning"]
